--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,36 @@
 {
-  "compilerOptions": {
-    "target": "es2020",
-    "module": "ESNext",
-    "sourceMap": true,
-    "strict": true,
-    "noUnusedLocals": true,
-    "jsx": "preserve",
-    "noImplicitReturns": true,
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "baseUrl": ".",
-    "types": ["element-plus", "axios", "node", "vite/client"],
-    "paths": {
-      "@/*": ["src/*"]
-    }
-  },
-  "include": ["src"]
+	"compilerOptions": {
+		"module": "commonjs",
+		"declaration": true,
+		"removeComments": true,
+		"emitDecoratorMetadata": true,
+		"experimentalDecorators": true,
+		"allowSyntheticDefaultImports": true,
+		"target": "es2017",
+		"sourceMap": true,
+		"moduleResolution": "node",
+		"outDir": "./dist/server",
+		"incremental": true,
+		"skipLibCheck": true,
+		"baseUrl": ".",
+		"paths": {
+			"~/*": [
+				"server/*"
+			]
+		},
+		"types": [
+			"@types/node"
+		]
+	},
+	"include": [
+		"server/**/*"
+	],
+	"exclude": [
+		"node_modules",
+		"dist",
+		"test",
+		"**/*spec.ts",
+		"web",
+		"build"
+	]
 }
