初始化项目

--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     }
   },
   "lint-staged": {
-    "*.{.js,.ts,.tsx,.vue}": [
+    "*.{js,ts,tsx,vue}": [
       "eslint",
       "git add"
     ]
